--- a/css/myblog.css
+++ b/css/myblog.css
@@ -4,7 +4,7 @@ body{
 	background-repeat: no-repeat; 
 	background-size: 1340px 120%;
 	background-position: 0 -40px;
-	background-image: url(images/backgroundimg.jpg); 
+	background-image: url(../images/backgroundimg.jpg); 
 }
 #header{
 	height: 120px;
@@ -26,13 +26,13 @@ body{
 	width: 100%;
 	height: 80%;
 	border-radius: 50%;
-	background-image: url(images/dog111.jpg);
+	background-image: url(../images/dog111.jpg);
 	background-size: 100% 130%;
 	background-position: 0 50%;
 	box-shadow: 0 0 22px #1f1f1f;	
 }
 .head_image:hover{
-	background-image: url(images/dog222.jpg);
+	background-image: url(../images/dog222.jpg);
 	background-size: 97% 122%;
 	background-position: 2px 50%;
 }
